--- a/kontak/index.html
+++ b/kontak/index.html
@@ -91,7 +91,7 @@
 				<div class="section-body">
 					<div class="card mb-5">
                 		<div class="card-header">
-                    		<h3>Fadhli Ryan Firmansyah</h3>
+                    		<h3>Kontak</h3>
                 		</div>
                 		<div class="card-body">
                     		<div class="table-responsive">
@@ -99,7 +99,7 @@
                            			 <thead>
                                 		<tr>
 		                                    <th>No</th>
-		                                    <th>Kontak</th>
+		                                    <th>List</th>
 		                                </tr>
 		                            </thead>
 		                            <tbody>
@@ -132,7 +132,7 @@
 		                            <tbody>
 		                                <tr>
 		                                    <td>1</td>
-		                                    <td><a href="https://www.mfarels.id">Website : www.mfarels.id</a></td>
+		                                    <td><a href="https://siswa7-vercel.app">Website : https://siswa7-vercel.app</a></td>
 		                                </tr>
 		                                <tr>
                                     		<td>2</td>
@@ -140,23 +140,23 @@
                                			</tr>
 		                                <tr>
                                     		<td>3</td>
-		                                    <td><a href="https://www.instagram.com/mfarels.id">Instagram : @mfarels.id</a></td>
+		                                    <td><a href="https://www.instagram.com/itspapoy">Instagram : @itspapoy</a></td>
                                			</tr>
 		                                 <tr>
 		                                    <td>4</td>
-		                                    <td><a href="https://www.youtube.com/channel/UCYfBSMa1JJbKwD8bNm-etiA">YouTube : MFarelS</a></td>
+		                                    <td><a href="https://www.youtube.com/channel/">YouTube : belum ada</a></td>
 		                                </tr>
 										<tr>
 		                                    <td>5</td>
-		                                    <td><a href="mailto:mfarels@mfarels.id">Email : fadhlirynx16@gmail.com</a></td>
+		                                    <td><a href="mailto:fadhlirynx16@gmail.com">Email : fadhlirynx16@gmail.com</a></td>
 		                                </tr>
 		                                <tr>
                                     		<td>6</td>
-		                                    <td><a href="https://github.com/xanzheus">GitHub : xanzheus</a></td>
+		                                    <td><a href="https://">Telegram : -</a></td>
                                			</tr>
 		                                <tr>
                                     		<td>7</td>
-		                                    <td><a href="https://mfarels.id/donate">Donate : mfarels.id/donate</a></td>
+		                                    <td><a href="https://">Line : -</a></td>
                                			</tr>
                                		</tbody>
 								</table>
@@ -214,7 +214,7 @@
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
                 href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a><br>© 2021 <a rel="nofollow"
-                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://www.google.com/url?sa=t&source=web&rct=j&url=http://www.smkn7bandung.sch.id/&ved=2ahUKEwjf3s7jtp_zAhXQb30KHf75B_oQFnoECCcQAg&usg=AOvVaw3xHZ_JJmlOmVR4UWfKfyaS" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
