--- a/pengurus-organisasi/index.html
+++ b/pengurus-organisasi/index.html
@@ -56,7 +56,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Fadhli Gamteng</div>
+										<div class="student-name mb-2">Alhdi Meyrival R</div>
 									</div>				
 								</div>
 							</div>
@@ -68,7 +68,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Muhammad Ardi Darmawan</div>
+										<div class="student-name mb-2">Alya Adelista</div>
 									</div>				
 								</div>
 							</div>
@@ -80,7 +80,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Muhammad Yusuf Aditya Rizky</div>
+										<div class="student-name mb-2">Amelia Fauziah</div>
 									</div>				
 								</div>
 							</div>
@@ -92,7 +92,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Fazya Anjelir Khairunnisa</div>
+										<div class="student-name mb-2">Azkhya Dwi Dhenyka</div>
 									</div>				
 								</div>
 							</div>
@@ -104,7 +104,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Salwa Nazhifa Azzahra</div>
+										<div class="student-name mb-2">Bintang Julia Jelita</div>
 									</div>				
 								</div>
 							</div>
@@ -116,7 +116,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Davina Putri Sahubawa</div>
+										<div class="student-name mb-2">Dewulan Siti</div>
 									</div>				
 								</div>
 							</div>
@@ -128,7 +128,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Annisa Sayahdina</div>
+										<div class="student-name mb-2">Dicky Sopiyan</div>
 									</div>				
 								</div>
 							</div>
@@ -140,7 +140,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Keisha Hanania Raziq</div>
+										<div class="student-name mb-2">Fadhli Ryan Firmansyah</div>
 									</div>				
 								</div>
 							</div>
@@ -152,7 +152,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Afgansyah Husam Mahdavikia</div>
+										<div class="student-name mb-2">Fauzi Firmansyah</div>
 									</div>				
 								</div>
 							</div>
@@ -164,7 +164,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Affan Abdillah Hasan</div>
+										<div class="student-name mb-2">Hanna Rahma Aulia</div>
 									</div>				
 								</div>
 							</div>
@@ -176,7 +176,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Asfa Al Maghfirah</div>
+										<div class="student-name mb-2">Ikhsan Aditya</div>
 									</div>				
 								</div>
 							</div>
@@ -188,7 +188,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Moreno Damanik</div>
+										<div class="student-name mb-2">M. Jordan Meidia Pratama</div>
 									</div>				
 								</div>
 							</div>
@@ -200,7 +200,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Feodora Mariska Berliana Pardede</div>
+										<div class="student-name mb-2">Mochamad Risky Firmansyah</div>
 									</div>				
 								</div>
 							</div>
@@ -212,7 +212,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Vivi Maulidani</div>
+										<div class="student-name mb-2">Muhammad Deras Banyu</div>
 									</div>				
 								</div>
 							</div>
@@ -224,7 +224,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Naya Andhira Tajudin</div>
+										<div class="student-name mb-2">Muhammad Kamal Hidayatullah</div>
 									</div>				
 								</div>
 							</div>
@@ -236,7 +236,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Kaylamevia Ariyanto</div>
+										<div class="student-name mb-2">Nabila Chaerunisa</div>
 									</div>				
 								</div>
 							</div>
@@ -248,7 +248,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Amira Aurelia Mazaya</div>
+										<div class="student-name mb-2">Nadiva Natania Nurdin</div>
 									</div>				
 								</div>
 							</div>
@@ -260,7 +260,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Rotua Vicky Winardo Pardede</div>
+										<div class="student-name mb-2">Nailla Fadillah Putri</div>
 									</div>				
 								</div>
 							</div>
@@ -272,7 +272,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Rotua Vicky Winardo Pardede</div>
+										<div class="student-name mb-2">Nawrah Tri Andifa</div>
 									</div>				
 								</div>
 							</div>
@@ -284,7 +284,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Khaidar Khalid</div>
+										<div class="student-name mb-2">Novia Selvianto</div>
 									</div>				
 								</div>
 							</div>
@@ -296,7 +296,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Hasht Behest Esfahan</div>
+										<div class="student-name mb-2">Raafi Irawan</div>
 									</div>				
 								</div>
 							</div>
@@ -308,7 +308,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Nabilah Rahmawati</div>
+										<div class="student-name mb-2">Rhadian Ramadhansyah</div>
 									</div>				
 								</div>
 							</div>
@@ -320,7 +320,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Naila Fariha</div>
+										<div class="student-name mb-2">Risma Amalia Putri</div>
 									</div>				
 								</div>
 							</div>
@@ -332,7 +332,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Shabina Salsabila</div>
+										<div class="student-name mb-2">Rizki Pradana</div>
 									</div>				
 								</div>
 							</div>
@@ -344,7 +344,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Naufal Khalish</div>
+										<div class="student-name mb-2">Salma Haifa Shalsabila</div>
 									</div>				
 								</div>
 							</div>
@@ -356,7 +356,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Fitria Ramadhani</div>
+										<div class="student-name mb-2">Siti Widia</div>
 									</div>				
 								</div>
 							</div>
@@ -368,7 +368,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Zava Zaneta Putra Irvani</div>
+										<div class="student-name mb-2">Tata Nur Arifin</div>
 									</div>				
 								</div>
 							</div>
@@ -380,7 +380,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Aisyah Nisrina</div>
+										<div class="student-name mb-2">Vina Jisnawati</div>
 									</div>				
 								</div>
 							</div>
@@ -392,7 +392,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Meidina Athaya </div>
+										<div class="student-name mb-2">Yuniarti Tesalonika</div>
 									</div>				
 								</div>
 							</div>
@@ -404,7 +404,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Anindita Dinda Tazkia</div>
+										<div class="student-name mb-2">Zikra Purnama</div>
 									</div>				
 								</div>
 							</div>
@@ -416,163 +416,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Zahra Dwi Syafira</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Nazhifa Nabila Putri</div>
-									</div>
-									</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Amanda Rizna Putri Pohan</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Naznin Raina Salwa</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Mohammad Alvi Rizky</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Alvaro Putra Pratama</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Muhammad Farel Syahtiawan</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Muhammad Ariq</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Naila Kirana Maharani</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Almer Clearesta Bila</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Anjani Maqfirohmah</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Fatimah Febrianti</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Shireen Aulia Faqih</div>
-									</div>				
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 mb-3">
-							<div class="card">
-								<div class="row">
-									<div class="col-4">
-										<img src="../img/MFarelS.jpg" alt="foto">
-									</div>
-									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Reva Aulia</div>
+										<div class="student-name mb-2">Zulfa Sabbihisma Primestia</div>
 									</div>				
 								</div>
 							</div>
@@ -586,8 +430,8 @@
 		<div class="container">
 			<div class="row">
 				<div><p class="love">Made With ❤️ By <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a><br>© 2021 <a rel="nofollow"
-                href="https://mfarels.id" target="_parent">MFarelS✓</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://github.com/ariiardana/" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://github.com/hisyamardiansyah/" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://github.com/sandhikagalih/" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://instagram.com/bintang_nur_pradana/" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://github.com/ibnusyawall/" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://github.com/MrHecka/" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://wa.me/6285745351659" target="_parent">Ilham Nezuko</a></p></div>
+                href="https://bit.ly/ClickDiSinii" target="_parent">Fadhli</a><br>© 2021 <a rel="nofollow"
+                href="https://biy.ly/ClickDiSinii" target="_parent">Fadhli</a>.  All Rights Reserved<br><br>Big Special Thanks To <a rel="nofollow" href="https://bit.ly/ClickDiSinii" target="_parent">Ariiardana</a>, <a rel="nofollow" href="https://bit.ly/ClickDiSinii" target="_parent">Hisyam Ardiansyah</a>, <a rel="nofollow" href="https://bit.ly/ClickDiSinii" target="_parent">Sandhika Galih</a>, <a rel="nofollow" href="https://biy.ly/ClickDiSinii" target="_parent">Bintang Nur Pradana</a>, <a rel="nofollow" href="https://bit.ly/ClickDiSinii" target="_parent">IbnuSyawall</a>, <a rel="nofollow" href="https://bit.ly/ClixkDiSinii" target="_parent">MrHecka</a>, <a rel="nofollow" href="https://bit.ly/ClickDiSinii" target="_parent">Ilham Nezuko</a></p></div>
 			</div>
 		</div>
 	</footer>
