--- a/pengurus-organisasi/index.html
+++ b/pengurus-organisasi/index.html
@@ -56,7 +56,7 @@
 										<img src="../img/MFarelS.jpg" alt="foto">
 									</div>
 									<div class="col-8 py-3 px-3">
-										<div class="student-name mb-2">Alhdi Meyrival R</div>
+										<div class="student-name mb-2">Aldhi Meyrival R</div>
 									</div>				
 								</div>
 							</div>
