--- a/pengurus-organisasi/index.html
+++ b/pengurus-organisasi/index.html
@@ -28,7 +28,7 @@
 			        	<a class="nav-link js-scroll-trigger" href="../">Home<span class="sr-only">(current)</span></a>
 			    	</li>
 			    	<li class="nav-item">
-			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Siswa Organisasi</a>
+			        	<a class="nav-link js-scroll-trigger" href="../pengurus-organisasi/">Daftar Siswa</a>
 			      	</li>
 			      	<li class="nav-item">
 			        	<a class="nav-link js-scroll-trigger" href="../absen/">Daftar Absen</a>
